[gd_scene load_steps=4 format=3 uid="uid://dk3qg1sqx20yh"]

[ext_resource type="Script" path="res://menu.gd" id="1_4ap61"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gi62g"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hyy0b"]
bg_color = Color(0.0807833, 0.0807834, 0.0807833, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.336608, 0.336608, 0.336607, 1)
corner_detail = 1

[node name="Menu" type="Node2D"]
script = ExtResource("1_4ap61")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 647.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gi62g")

[node name="Panel2" type="Panel" parent="."]
offset_left = 13.0
offset_top = 575.0
offset_right = 308.0
offset_bottom = 632.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hyy0b")

[node name="Panel5" type="Panel" parent="."]
offset_left = 1004.0
offset_top = 68.0
offset_right = 1085.0
offset_bottom = 104.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hyy0b")

[node name="SpinBox" type="SpinBox" parent="."]
offset_left = 1007.0
offset_top = 71.0
offset_right = 1098.0
offset_bottom = 102.0
min_value = 1.0
max_value = 120.0
value = 30.0
alignment = 1
suffix = "FPS"
select_all_on_focus = true

[node name="Button" type="Button" parent="."]
offset_left = 13.0
offset_top = 575.0
offset_right = 308.0
offset_bottom = 633.0
text = "Start recording"
flat = true

[node name="Label" type="Label" parent="."]
offset_left = 958.0
offset_top = 15.0
offset_right = 1136.0
offset_bottom = 64.0
text = "Recording FPS 
(Must be less than 120)"
horizontal_alignment = 1

[node name="FileDialog" type="FileDialog" parent="."]
title = "Save Mocap File"
position = Vector2i(55, 100)
size = Vector2i(668, 420)
dialog_close_on_escape = false
access = 2
filters = PackedStringArray("*.bvh; BioVision Hierachy")

[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_start_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
